--- a/css/style.css
+++ b/css/style.css
@@ -1,6 +1,9 @@
 *{
     font-family:Roboto ;
 }
+button{
+    cursor: pointer;
+}
 
 body {
     background-image: url(res/gear\ illustration.jpg);
@@ -42,6 +45,7 @@ margin-left: 40px;
 text-align: right;
 margin-top: 13px;
 margin-left: 20px;
+cursor: pointer;
  
 }
 
