--- a/css/style.css
+++ b/css/style.css
@@ -111,6 +111,8 @@ body {
             font-size: 14px;
             color: #505F98;
         }
+
+        
         #Purchase{
             background-color: #111B47;
             color: white;
@@ -127,3 +129,15 @@ body {
             display: flex;
             gap: 28px;
         }
+
+        /* #Learn :hover{
+            background-color: #111B47;
+            color: white;
+        }
+
+        #Purchase:hover{
+            background-color: white;
+            border-color: black;
+            border: 2px solid;
+            color: #091133;
+        } */
